# f1r3sky-backend-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  format_changed_source.sh  transfer.rhl
.github/workflows/: rust.yml
.run/: docker_events-sync.dockerfile.run.xml  docker_state-sync.dockerfile.run.xml  rchain up.run.xml  run backend rs.run.xml
cypher/backend/: Cargo.toml
cypher/frontend/: Cargo.toml
docker/: demo-docker-compose.yaml  docker-compose.yaml  events-sync.dockerfile  firefly.dockerfile  run-demo.py  state-sync.dockerfile
docker/genesis/: wallets.txt
firefly-api/: Cargo.toml  build.rs
firefly-api/src/: blocks.rs  client.rs  communication_service.rs  lib.rs  models.rs  providers.rs  read_node_client.rs  repositories.rs  transaction.rs  write_node_client.rs
firefly-api/src/client/: helpers.rs
firefly-api/src/contracts/: mod.rs
firefly-api/templates/: check_balance.rho  set_transfer.rho
firefly-docs/: dev-environment.md  wallet-api.md
firefly-events-sync/: Cargo.toml
firefly-events-sync/src/: main.rs
firefly-state-sync/: Cargo.toml
firefly-state-sync/src/: main.rs
firefly/docs/: dev-environment.md
protobuf/: ExternalCommunicationServiceV1.proto
rsky-common/: Cargo.toml
rsky-crypto/: Cargo.toml
rsky-feedgen/: Cargo.toml
rsky-firehose/: Cargo.toml
rsky-identity/: Cargo.toml
rsky-jetstream-subscriber/: Cargo.toml
rsky-labeler/: Cargo.toml
rsky-lexicon/: Cargo.toml
rsky-pds/: Cargo.toml  Dockerfile  diesel.toml
rsky-pds/src/: lib.rs  main.rs
rsky-pds/src/apis/: mod.rs
rsky-pds/src/apis/com/atproto/identity/: resolve_handle.rs
rsky-pds/src/apis/com/atproto/server/: create_account.rs
rsky-pds/src/apis/firefly/: client.rs  create_transfer_request.rs  fulfill_transfer_request.rs  get_transfer_request.rs  get_wallet_state_and_history.rs  mod.rs  models.rs  providers.rs  repositories.rs  state.rs  transactions.rs  transfer.rs  wallet_history_example.rs
rsky-pds/src/apis/firefly/contracts/: check_balance.rho  mod.rs  set_transfer.rho
rsky-pds/src/config/: mod.rs
rsky-pds/src/image/: mod.rs
rsky-pds/src/lexicon/: lexicons.toml
rsky-pds/src/wallet/: mod.rs
rsky-repo/: Cargo.toml
rsky-satnav/: Cargo.toml
rsky-syntax/: Cargo.toml
test-transactions-list/: Cargo.toml
test-transactions-list/src/: main.rs
