[package]
authors       = ["Rudy Fraser <him@rudyfraser.com>"]
description   = "Shared code for rsky"
documentation = "https://docs.rs/rsky-common"
edition       = "2021"
homepage      = "https://blackskyweb.xyz"
license       = "Apache-2.0"
name          = "rsky-common"
publish       = true
repository    = "https://github.com/blacksky-algorithms/rsky/tree/main/rsky-common"
version       = "0.1.1"


[dependencies]
anyhow             = "1.0.79"
base64ct           = "1.6.0"
chrono             = "0.4.39"
futures            = "0.3.28"
indexmap           = { version = "1.9.3", features = ["serde-1"] }
lexicon_cid        = { workspace = true }
libipld            = { workspace = true }
rand               = { workspace = true }
rand_core          = { workspace = true }
regex              = "1.8.4"
rsky-identity      = { workspace = true }
secp256k1          = { workspace = true }
serde              = { version = "1.0.217", features = ["derive"] }
serde_ipld_dagcbor = { workspace = true }
serde_json         = "1.0.138"
sha2               = { workspace = true }
thiserror          = "2.0.11"
tracing            = "0.1.41"                                       # @TODO: Remove anyhow in lib
url                = "2.5.4"
urlencoding        = "2.1.3"

[dev-dependencies]
temp-env = { version = "0.3.6" }
