[package]
authors       = ["Rudy Fraser <him@rudyfraser.com>"]
description   = "Rust library providing basic cryptographic helpers as needed in atproto"
documentation = "https://docs.rs/rsky-crypto"
edition       = "2021"
homepage      = "https://blackskyweb.xyz"
license       = "Apache-2.0"
name          = "rsky-crypto"
publish       = true
repository    = "https://github.com/blacksky-algorithms/rsky/tree/main/rsky-crypto"
version       = "0.1.2"

[dependencies]
anyhow          = "1.0.79"
multibase       = "0.9.1"
p256            = { version = "0.13.2", features = ["alloc", "arithmetic", "ecdsa"] }
secp256k1       = { workspace = true }
unsigned-varint = "0.8.0"
