[package]
authors       = ["Rudy Fraser <him@rudyfraser.com>"]
description   = "A framework for building AT Protocol feed generators, in Rust."
documentation = "https://docs.rs/rsky-feedgen"
edition       = "2021"
homepage      = "https://blackskyweb.xyz"
license       = "Apache-2.0"
name          = "rsky-feedgen"
publish       = false
repository    = "https://github.com/blacksky-algorithms/rsky/tree/main/rsky-feedgen"
version       = "1.1.4"

[dependencies]
base64             = "0.21.2"
chrono             = "0.4.26"
chrono-tz          = "0.10.1"
diesel             = { version = "=2.1.5", features = ["chrono", "postgres"] }
dotenvy            = "0.15"
moka               = { version = "0.12", features = ["future"] }
once_cell          = "1.19.0"
rand               = "0.8.5"
regex              = "1.8.4"
rocket             = { version = "=0.5.1", features = ["json"] }
rsky-common        = { workspace = true }
rsky-lexicon       = { workspace = true }
serde              = { version = "1.0.160", features = ["derive"] }
serde_bytes        = "0.11.9"
serde_cbor         = "0.11.2"
serde_derive       = "^1.0"
serde_ipld_dagcbor = "0.3.0"
serde_json         = "1.0.96"

[dependencies.rocket_sync_db_pools]
features = ["diesel_postgres_pool"]
version  = "=0.1.0"

[dependencies.reqwest]
features = ["json", "multipart"]
version  = "^0.11"

[dev-dependencies]
serial_test = "*"
temp-env    = { version = "0.3.6", features = ["async_closure"] }
tokio       = { version = "1", features = ["full"] }
