[package]
authors       = ["Rudy Fraser <him@rudyfraser.com>"]
description   = "A framework for subscribing to the AT Protocol firehose, in Rust."
documentation = "https://docs.rs/rsky-firehose"
edition       = "2021"
homepage      = "https://blackskyweb.xyz"
license       = "Apache-2.0"
name          = "rsky-firehose"
publish       = false
repository    = "https://github.com/blacksky-algorithms/rsky/tree/main/rsky-firehose"
version       = "0.2.0"

[dependencies]
anyhow             = "1.0.81"
chrono             = { version = "0.4.24", features = ["serde"] }
ciborium           = "0.2.0"
derive_builder     = "0.12.0"
dotenvy            = "0.15.7"
futures            = "0.3.28"
libipld            = { version = "0.16.0", features = ["serde-codec"] }
miette             = "5.8.0"
parking_lot        = "0.12.1"
reqwest            = { version = "0.11.16", features = ["json", "rustls"] }
retry              = "2.0.0"
rsky-lexicon       = { workspace = true }
serde              = { version = "1.0.160", features = ["derive"] }
serde_bytes        = "0.11.9"
serde_cbor         = "0.11.2"
serde_derive       = "^1.0"
serde_ipld_dagcbor = "0.6.1"
serde_json         = "1.0.96"
thiserror          = "1.0.40"
tokio              = { version = "1.28.0", features = ["full"] }
tokio-tungstenite  = { version = "0.18.0", features = ["native-tls"] }
url                = "2.3.1"
