[package]
authors       = ["Rudy Fraser <him@rudyfraser.com>"]
description   = "AT Protocol firehose subscriber that labels content for a moderation service."
documentation = "https://docs.rs/rsky-labeler"
edition       = "2021"
homepage      = "https://blackskyweb.xyz"
license       = "Apache-2.0"
name          = "rsky-labeler"
publish       = false
repository    = "https://github.com/blacksky-algorithms/rsky/tree/main/rsky-labeler"
version       = "0.1.2"

[dependencies]
anyhow             = "1.0.81"
atrium-api         = { version = "0.24.6", features = ["namespace-toolsozone"] }
atrium-ipld        = { package = "ipld-core", version = "0.4.1" }
atrium-xrpc-client = "0.5.8"
chrono             = { version = "0.4.24", features = ["serde"] }
ciborium           = "0.2.0"
derive_builder     = "0.20.2"
dotenvy            = "0.15.7"
futures            = "0.3.28"
libipld            = { version = "0.16.0", features = ["serde-codec"] }
miette             = "7.4.0"
parking_lot        = "0.12.1"
reqwest            = { version = "0.12.9", features = ["json"] }
retry              = "2.0.0"
rsky-common        = { workspace = true }
rsky-lexicon       = { workspace = true }
serde              = { version = "1.0.160", features = ["derive"] }
serde_bytes        = "0.11.9"
serde_cbor         = "0.11.2"
serde_derive       = "^1.0"
serde_ipld_dagcbor = "0.6.1"
serde_json         = "1.0.96"
thiserror          = "2.0.9"
tokio              = { version = "1.28.0", features = ["full"] }
tokio-tungstenite  = { version = "0.26.1", features = ["native-tls"] }
