[package]
authors       = ["Rudy Fraser <him@rudyfraser.com>"]
description   = "Bluesky API library"
documentation = "https://docs.rs/rsky-lexicon"
edition       = "2021"
homepage      = "https://blackskyweb.xyz"
keywords      = ["atproto", "bluesky"]
license       = "Apache-2.0"
name          = "rsky-lexicon"
publish       = true
readme        = "README.md"
repository    = "https://github.com/blacksky-algorithms/rsky/tree/main/rsky-lexicon"
version       = "0.2.7"

[dependencies]
anyhow         = "1.0.79"                                     # @TODO: Remove anyhow in lib
chrono         = { version = "0.4.24", features = ["serde"] }
derive_builder = "0.12.0"
lexicon_cid    = { workspace = true }
libipld        = { workspace = true }
miette         = "5.8.0"
parking_lot    = "0.12.1"
secp256k1      = { workspace = true }
serde          = { workspace = true }
serde_bytes    = "0.11.9"
serde_cbor     = { workspace = true }
serde_derive   = "^1.0"
serde_json     = { workspace = true }
thiserror      = "1.0.40"
