[package]
authors       = ["Rudy Fraser <him@rudyfraser.com>"]
description   = "Rust crate for atproto repositories, an in particular the Merkle Search Tree (MST) data structure."
documentation = "https://docs.rs/rsky-repo"
edition       = "2021"
homepage      = "https://blackskyweb.xyz"
license       = "Apache-2.0"
name          = "rsky-repo"
publish       = true
repository    = "https://github.com/blacksky-algorithms/rsky/tree/main/rsky-repo"
version       = "0.0.1"

[dependencies]
anyhow             = "1.0.79"                                      # @TODO: Remove anyhow in lib
async-recursion    = "1.1.1"
async-stream       = "0.3.5"
async-trait        = "0.1.86"
futures            = "0.3.28"
integer-encoding   = { version = "3", features = ["tokio_async"] }
lexicon_cid        = { workspace = true }
libipld            = { workspace = true }
rand               = "0.8.5"
rand_core          = "0.6.4"
rsky-common        = { workspace = true }
rsky-crypto        = { workspace = true }
rsky-lexicon       = { workspace = true }
rsky-syntax        = { workspace = true }
secp256k1          = { workspace = true }
serde              = { workspace = true }
serde_bytes        = { workspace = true }
serde_cbor         = { workspace = true }
serde_derive       = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
serde_json         = { workspace = true }
sha2               = { workspace = true }
thiserror          = "1.0.40"
tokio              = { workspace = true }

lazy_static = "1.4.0"
regex       = "1.10.3"
