[package]
authors       = ["Rudy Fraser <him@rudyfraser.com>"]
description   = "Rust library of validation helpers for identifier strings"
documentation = "https://docs.rs/rsky-syntax"
edition       = "2021"
homepage      = "https://blackskyweb.xyz"
license       = "Apache-2.0"
name          = "rsky-syntax"
publish       = false
repository    = "https://github.com/blacksky-algorithms/rsky/tree/main/rsky-syntax"
version       = "0.1.0"

[dependencies]
anyhow       = "1.0.86"
chrono       = "0.4.39"
lazy_static  = "1.5.0"
regex        = "1.10.5"
serde        = { version = "1.0.160", features = ["derive"] }
serde_derive = "^1.0"
thiserror    = "1.0.40"
url          = "2.5.2"
