[package]
edition = "2024"
name    = "backend"
version = "0.0.1"

[dependencies]
anyhow            = "1.0.97"
atrium-api        = { version = "0.25.0", default-features = false }
atrium-common     = "0.1.0"
atrium-identity   = "0.1.0"
atrium-xrpc       = "0.12.1"
axum              = { version = "0.8.1", features = ["macros"] }
axum-extra        = { version = "0.10.0", features = ["typed-header"] }
base64            = "0.22.1"
chrono            = "0.4.40"
ecdsa             = { version = "0.16.9", features = ["signing"] }
elliptic-curve    = "0.13.8"
futures           = "0.3.31"
headers           = "0.4"
hickory-resolver  = "0.24.1"
jose-jwa          = "0.1.2"
jose-jwk          = { version = "0.1.2", features = ["p256"] }
p256              = { version = "0.13.2", features = ["ecdsa"] }
rand              = { workspace = true, features = ["small_rng"] }
reqwest           = { version = "0.12.12", optional = true }
rsky-firehose     = { workspace = true }
rsky-lexicon      = { workspace = true }
serde             = { workspace = true }
serde_cbor        = { workspace = true }
serde_html_form   = "0.2.7"
serde_json        = { workspace = true }
sha2              = { workspace = true }
surrealdb         = { version = "2.2.1", features = ["kv-rocksdb"] }
thiserror         = "2.0.12"
tokio             = { workspace = true }
tokio-stream      = { version = "0.1.17", features = ["sync"] }
tokio-tungstenite = "0.23.1"
tower             = "0.5.2"
tower-http        = { version = "0.6.2", features = ["cors", "fs"] }
tracing           = "0.1.41"
trait-variant     = "0.1.2"
uuid              = { version = "1", features = ["v4"] }

[dev-dependencies]
p256  = { version = "0.13.2", features = ["pem"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "backend"
path = "src/main.rs"

[features]
default        = ["default-client"]
default-client = ["reqwest/default-tls"]
