[package]
authors = ["Rudy Fraser <him@rudyfraser.com>"]
edition = "2021"
name    = "frontend"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono               = "0.4.40"
dioxus               = { version = "0.6.1", features = [] }
gloo-storage         = "0.3.0"
js-sys               = "0.3.77"
reqwest              = { version = "0.12.12", features = ["json"] }
serde                = { workspace = true }
serde_json           = { workspace = true }
wasm-bindgen         = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys              = { version = "0.3.77", features = ["DomTokenList", "Element", "EventSource", "MediaQueryList", "Window"] }

[features]
default = ["web"]
desktop = ["dioxus/desktop"]
mobile  = ["dioxus/mobile"]
web     = ["dioxus/web"]
